# substrate-remittance

node/: Cargo.toml
node/src/: lib.rs  main.rs  puzzle_rpc.rs  rpc.rs
pallets/remittance/: Cargo.toml
pallets/remittance/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
