[package]
authors = ['andyjsbell@gmail.com']
description = 'FRAME pallet for remittance.'
edition = '2018'
license = 'Unlicense'
name = 'pallet-remittance'
repository = 'https://github.com/andyjsbell/substrate-remittance'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
balances = { package = 'pallet-balances', version = '2.0.0', default-features = false }
sp-runtime = { default-features = false, version = '2.0.0' }

[dev-dependencies]
sp-core = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
]
